<resources>
    <string name="app_name">BTG</string>
    <string name="long_app_name">Brain Training Game</string>
    <string name="action_settings">Settings</string>
    <string name="continue_label">Continue</string>
    <string name="new_game_label">New Game</string>
    <string name="about_label">About</string>
    <string name="ok_label">OK</string>
    <string name="about_title">Game Instructions</string>
    <string name="about_text">
        \ This game is played using the keypad. The aim is to answer mathematical questions as fast as possible.\n\ \n\ If the result is NOT a whole number, it should be rounded to the closest one.\n\ \n\
        For example, the expression 10/3*2 should evaluate to 6, because 10/3 is 3.333 which is rounded to 3, then multiplied by 2, giving the overall result of 6.
    </string>
    <string name="exit_label">Exit</string>
    <string name="difficulty_label">Select difficulty level</string>
    <string name="difficulty_notif">Prove yourself how good you really are.</string>
    <string name="novice_label">Novice</string>
    <string name="easy_label">Easy</string>
    <string name="medium_label">Medium</string>
    <string name="guru_label">Guru</string>
    <string name="start_label">Start!</string>
    <string name="keypad_1">1</string>
    <string name="keypad_2">2</string>
    <string name="keypad_3">3</string>
    <string name="keypad_4">4</string>
    <string name="keypad_5">5</string>
    <string name="keypad_6">6</string>
    <string name="keypad_7">7</string>
    <string name="keypad_8">8</string>
    <string name="keypad_9">9</string>
    <string name="keypad_0">0</string>
    <string name="keypad_DEL">DEL</string>
    <string name="keypad_hash">#</string>
    <string name="keypad_minus">–</string>
    <string name="display_guess">Guess:2+6*8/3/3</string>
    <string name="display_answer">=?</string>
    <string name="display_hint">Hint:</string>
    <string name="display_hint_ending">None (4 left)</string>
    <string name="display_time_remaining">Time Remaining: </string>
    <string name="display_time">10 secs</string>
    <string name="game_label">Brain Training Game</string>
    <string name="score">Score:0</string>
    <string name="correct">Correct!</string>
    <string name="wrong">Wrong!</string>
    <string name="hint_less">Hint: Less</string>
    <string name="hint_greater">Hint: Greater</string>
    <string name="good_answer">0</string>
    <string name="level_chosen">0</string>
    <string name="ending_label">Congratulations</string>
    <string name="ending_text">Good Job. This is your </string>
    <string name="save_label">Save before exit?</string>
    <string name="save_message">Do you want to save your game before exiting?</string>
    <string name="save_btn">Save and Exit</string>
    <string name="start_button">Start!</string>
    <string name="save_game">true</string>
</resources>