<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    tools:context=".GameActivity">

    <Button android:id="@+id/small1" style="@style/KeypadButton"
        android:layout_column="0" android:layout_row="0" android:text="@string/keypad_1"/>
    <Button android:id="@+id/small2" style="@style/KeypadButton"
        android:layout_column="1" android:layout_row="0" android:text="@string/keypad_2"/>
    <Button android:id="@+id/small3" style="@style/KeypadButton"
        android:layout_column="2" android:layout_row="0" android:text="@string/keypad_3"/>
    <Button android:id="@+id/small4" style="@style/KeypadButton"
        android:layout_column="0" android:layout_row="1" android:text="@string/keypad_4"/>
    <Button android:id="@+id/small5" style="@style/KeypadButton"
        android:layout_column="1" android:layout_row="1" android:text="@string/keypad_5"/>
    <Button android:id="@+id/small6" style="@style/KeypadButton"
        android:layout_column="2" android:layout_row="1" android:text="@string/keypad_6"/>
    <Button android:id="@+id/small7" style="@style/KeypadButton"
        android:layout_column="0" android:layout_row="2" android:text="@string/keypad_7"/>
    <Button android:id="@+id/small8" style="@style/KeypadButton"
        android:layout_column="1" android:layout_row="2" android:text="@string/keypad_8"/>
    <Button android:id="@+id/small9" style="@style/KeypadButton"
        android:layout_column="2" android:layout_row="2" android:text="@string/keypad_9"/>
    <Button android:id="@+id/small10" style="@style/KeypadButton"
        android:layout_column="0" android:layout_row="3" android:text="@string/keypad_DEL"/>
    <Button android:id="@+id/small11" style="@style/KeypadButton"
        android:layout_column="1" android:layout_row="3" android:text="@string/keypad_0"/>
    <Button android:id="@+id/small12" style="@style/KeypadButton"
        android:layout_column="2" android:layout_row="3" android:text="@string/keypad_hash"/>
    <Button android:id="@+id/small13" style="@style/KeypadButton"
        android:layout_column="3" android:layout_row="3" android:text="@string/keypad_minus"/>
</GridLayout>