<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".GameActivity">

    <Switch
        android:id="@+id/Hints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_row="0"
        android:text="@string/display_hint"
        android:textSize="@dimen/menu_text_size" />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_row="0"
        android:text="@string/score"
        android:textColor="@android:color/black"
        android:textSize="@dimen/menu_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="1">

        <TextView
            android:id="@+id/guess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/guess_margin"
            android:text="@string/display_guess"
            android:textColor="@android:color/black"
            android:textSize="@dimen/menu_text_smaller" />

        <TextView
            android:id="@+id/answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/guess_margin"
            android:paddingLeft="@dimen/button_padding"
            android:text="@string/display_answer"
            android:textColor="@android:color/black"
            android:textSize="@dimen/menu_text_smaller" />
    </LinearLayout>

    <TextView
        android:id="@+id/correct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_row="2"
        android:text="@string/correct"
        android:textAllCaps="true"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="@dimen/menu_text_smaller"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/wrong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_row="2"
        android:text="@string/wrong"
        android:textAllCaps="true"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="@dimen/menu_text_smaller"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/hint_less"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_row="2"
        android:text="@string/hint_less"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="@dimen/menu_text_smaller"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/hint_greater"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_row="2"
        android:text="@string/hint_greater"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="@dimen/menu_text_smaller"
        android:visibility="invisible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_row="3"
        android:paddingTop="@dimen/display_padding"
        android:text="@string/display_time_remaining"
        android:textColor="@android:color/black"
        android:textSize="@dimen/menu_text_smaller" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_row="3"
        android:paddingTop="@dimen/display_padding"
        android:text="@string/display_time"
        android:textColor="@android:color/black"
        android:textSize="@dimen/menu_text_smaller" />
</GridLayout>